# NebulaBot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
nebula/core/: bot.py  config.py  message.py  platform.py  plugin.py  provider.py  store.py
nebula/providers/: anthropic.py  gemini.py  mock.py  openai.py  openai_compatible.py
nebula/ui/: index.html  script.js  style.css
plugins/: echo.py  help.py  persona.py
